# httpunk

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
crates/vendor-h2/: Cargo.toml
crates/vendor-h2/src/: ext.rs  lib.rs
crates/vendor-h2/src/codec/: mod.rs
crates/vendor-h2/src/frame/: data.rs  headers.rs  ping.rs
crates/vendor-h2/src/hpack/: header.rs  mod.rs
crates/vendor-h2/src/proto/: error.rs  mod.rs
crates/vendor-h2/src/proto/streams/: mod.rs  state.rs
crates/vendor-hyper/: Cargo.toml
crates/vendor-hyper-util/: Cargo.toml
crates/vendor-hyper-util/src/: lib.rs
crates/vendor-hyper-util/src/client/: mod.rs
crates/vendor-hyper-util/src/client/proxy/: mod.rs
crates/vendor-hyper/src/: error.rs  lib.rs
crates/vendor-hyper/src/body/: length.rs  mod.rs
crates/vendor-hyper/src/common/: date.rs  mod.rs
crates/vendor-hyper/src/ext/: h1_reason_phrase.rs  informational.rs  mod.rs
crates/vendor-hyper/src/proto/: mod.rs
crates/vendor-hyper/src/proto/h1/: decode.rs  encode.rs  httpunk.rs  io.rs  mod.rs  role.rs
httpunk/: __init__.py  _common.py  _httpunk.pyi  asyncio.py  exceptions.py  http.py  types.py
httpunk/_backend/: __init__.py  asyncio.py  tonio.py
httpunk/h1/: __init__.py  client.py  connection.py  server.py  share.py
httpunk/h2/: __init__.py  client.py  connection.py  server.py  settings.py  share.py  stream.py  streams.py
httpunk/util/: __init__.py  auto.py  client.py  graceful.py  pool.py  proxy.py
scripts/: vendor-h2.sh  vendor-hyper-util.sh  vendor-hyper.sh
src/: errors.rs  lib.rs
src/h1/: codec.rs
src/h2/: codec.rs  mod.rs  streams.rs
src/http/: mod.rs
src/py/: mod.rs  proxy.rs
src/py/h1/: codec.rs  mod.rs
src/py/h2/: codec.rs  mod.rs  streams.rs
tests/: _client.py  conftest.py  test_asyncio_backend.py  test_asyncio_client_protocol.py  test_asyncio_e2e.py  test_asyncio_protocol.py  test_backend.py  test_h1_codec.py  test_h1_conn.py  test_h1_decode.py  test_h1_server.py  test_h2_codec.py  test_h2_conn.py  test_h2_errors.py  test_h2_flow.py  test_h2_flow_control.py  test_h2_ready.py  test_h2_server.py  test_h2_settings.py  test_h2_state.py  test_headermap.py  test_util_auto.py  test_util_connect.py  test_util_graceful.py  test_util_pool.py  test_util_proxy.py  test_util_tls.py
