[project]
name = "httpunk"
authors = [
    {name = "Giovanni Barillari", email = "g@baro.dev"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

dynamic = [
    "description",
    "keywords",
    "license",
    "readme",
    "version"
]

requires-python = ">=3.10"
# tonio is the free-threaded runtime backend; it builds only on free-threaded
# CPython >= 3.14 (non-Windows). There is no free-threaded PEP 508 marker, so gate on
# 3.14 + non-Windows as the closest approximation. Off that, httpunk runs on the
# asyncio backend (`Backend.asyncio`), which needs no extra dependency.
dependencies = [
    "tonio>=0.7.1; python_version >= '3.14' and platform_system != 'Windows'",
]

[dependency-groups]
build = [
    'maturin~=1.8',
]
lint = [
    'ruff~=0.11',
]
test = [
    'pytest~=8.3',
    'pytest-asyncio~=0.24',
    'trustme~=1.1',
]

all = [
    { include-group = 'build' },
    { include-group = 'lint' },
    { include-group = 'test' },
]

[project.urls]
Homepage = "https://github.com/gi0baro/httpunk"
Funding = "https://github.com/sponsors/gi0baro"
Source = "https://github.com/gi0baro/httpunk"

[tool.pytest.ini_options]
# tonio tests use the tonio plugin's `@pytest.mark.tonio`; strict mode keeps
# pytest-asyncio to only its own `@pytest.mark.asyncio` tests, so the two coexist.
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["maturin>=1.8.0,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "httpunk._httpunk"
bindings = "pyo3"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint]
extend-select = [
    # E and F are enabled by default
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'C90',    # mccabe
    'I',      # isort
    'N',      # pep8-naming
    'Q',      # flake8-quotes
    'RUF100', # ruff (unused noqa)
    'S',      # flake8-bandit
    'W',      # pycodestyle
]
extend-ignore = [
    'S101', # assert is fine
]
mccabe = { max-complexity = 24 }

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ['httpunk', 'tests']

[tool.ruff.lint.per-file-ignores]
'httpunk/__init__.py' = ['F401']
'tests/**' = ['B018', 'S110', 'S501']

[tool.uv]
package = false
